# Important-codes-for-using-anywhere

./: Errors Solutions  Use full commands  daysBetweenTwoDates.cpp  how to setup c++ library  multicast receiver for linux.cpp
Agorithm Important codes/All codes templates/: basic start.cpp  binarySearch.cpp  frequencyFill.cpp  sieveOfErathosthenes.cpp
Agorithm Important codes/Greedy/: FractionaKnapsack.cpp  optimalMergeProblem.cpp
Agorithm Important codes/LinkedList/: CheckLLPalindrome.cpp  CountNodeInLOOP.cpp  DeleteMiddle.cpp  DetectLoopInLL.cpp  IntersectionOfTwoSortedLL.cpp  LengthOf LLusingRecursion.cpp  MergeTwoSortedLinkedList.cpp  MoveLastElementToFront.cpp  RemoveDuplicatesFromSortedLinkedList.cpp  ReverseLinkedList.cpp  SearchElementUsingRecursion.cpp  SinglyLinkedList.cpp  circulardoublylinkedlist.cpp  circularlinkedlist.cpp  doublylinkedlist.cpp  printMiddleofLinkedList.cpp  printReverseLLWithoutActuallyReversingLL.cpp  removeDuplicatesFromUnsortedUsingHashing.cpp  singlylinkedlist2.cpp
Agorithm Important codes/String/: KMP.cpp
Agorithm Important codes/dynamic/: LCS.cpp
Agorithm Important codes/graph/: DFSUsingAdjMatrix.cpp  bfsUsingAdjMatrix.cpp  kruskalUsingPriorityQueue.cpp
CPP short programs/: daysBetweenTwoDates.cpp  randomPasswordGenerator.cpp  string-delimiter-separate-to-vectorString.cpp
UDP Sender/: sender  serverunicast.c
UDP Unicast with console and Nanolog/UDP UNICAST with logging/: CMakeLists.txt  Nanolog.cpp  Nanolog.hpp  main.cpp
UDP unicast code and exe/: udpListner
rabbitMq/: rabbitmqConsumer.cpp  rabbitmqProducer.cpp
(+15 files in other folders)
